src/parser.output
Nonterminals useless in grammar

    EXTERNAL_DECLARATION
    TRANSLATION_UNIT


Terminals unused in grammar

    T_EXPONENT
    T_NOT
    T_NUMBER
    T_VARIABLE


Rules useless in grammar

  207 EXTERNAL_DECLARATION: DECLARATION
  208                     | FUNCTION_DEF

  209 TRANSLATION_UNIT: EXTERNAL_DECLARATION
  210                 | TRANSLATION_UNIT EXTERNAL_DECLARATION


State 13 conflicts: 2 reduce/reduce
State 27 conflicts: 1 shift/reduce
State 32 conflicts: 1 shift/reduce
State 33 conflicts: 1 shift/reduce
State 113 conflicts: 5 reduce/reduce
State 114 conflicts: 1 shift/reduce
State 137 conflicts: 14 shift/reduce
State 141 conflicts: 14 shift/reduce
State 148 conflicts: 1 shift/reduce
State 333 conflicts: 1 shift/reduce


Grammar

    0 $accept: ROOT $end

    1 ROOT: FUNCTION_DEF

    2 FUNCTION_DEF: DECLARATION_SPECIFIER DECLARATOR DECLARATION_LS COMPOUND
    3             | DECLARATION_SPECIFIER DECLARATOR COMPOUND
    4             | DECLARATOR DECLARATION_LS COMPOUND
    5             | DECLARATOR COMPOUND

    6 JUMP: T_GOTO T_IDENTIFIER T_SEMI
    7     | T_CONTINUE T_SEMI
    8     | T_BREAK T_SEMI
    9     | T_RETURN T_SEMI
   10     | T_RETURN EXPRESSION T_SEMI

   11 ITERATION: T_WHILE T_LBRACKET EXPRESSION T_RBRACKET STATEMENT
   12          | T_DO STATEMENT T_WHILE T_LBRACKET EXPRESSION T_RBRACKET T_SEMI
   13          | T_FOR T_LBRACKET EXPRESSION_STATEMENT EXPRESSION_STATEMENT T_RBRACKET STATEMENT
   14          | T_FOR T_LBRACKET EXPRESSION_STATEMENT EXPRESSION_STATEMENT EXPRESSION T_RBRACKET STATEMENT

   15 SELECTION: T_IF T_LBRACKET EXPRESSION T_RBRACKET STATEMENT
   16          | T_IF T_LBRACKET EXPRESSION T_RBRACKET STATEMENT T_ELSE STATEMENT
   17          | T_SWITCH T_LBRACKET EXPRESSION T_RBRACKET STATEMENT

   18 EXPRESSION_STATEMENT: T_SEMI
   19                     | EXPRESSION T_SEMI

   20 STATEMENT_LS: STATEMENT
   21             | STATEMENT_LS STATEMENT

   22 DECLARATION_LS: DECLARATION
   23               | DECLARATION_LS DECLARATION

   24 COMPOUND: T_LCURLY T_RCURLY
   25         | T_LCURLY STATEMENT_LS T_RCURLY
   26         | T_LCURLY DECLARATION_LS T_RCURLY
   27         | T_LCURLY DECLARATION_LS STATEMENT_LS T_RCURLY

   28 LABELED: T_IDENTIFIER T_COLON STATEMENT
   29        | T_CASE CONSTANT T_COLON STATEMENT
   30        | T_DEFAULT T_COLON STATEMENT

   31 STATEMENT: LABELED
   32          | COMPOUND
   33          | EXPRESSION_STATEMENT
   34          | SELECTION
   35          | ITERATION
   36          | JUMP

   37 INITIALIZER_LS: INITIALIZER
   38               | INITIALIZER_LS T_COMMA INITIALIZER

   39 INITIALIZER: ASSIGNMENT
   40            | T_LCURLY INITIALIZER_LS T_RCURLY
   41            | T_LCURLY INITIALIZER_LS T_COMMA T_RCURLY

   42 DIRECT_ABSTRACT_DECLARATOR: T_LBRACKET ABSTRACT_DECLARATOR T_RBRACKET
   43                           | T_LSQUARE T_RSQUARE
   44                           | T_LSQUARE CONSTANT T_RSQUARE
   45                           | DIRECT_ABSTRACT_DECLARATOR T_LSQUARE T_RSQUARE
   46                           | DIRECT_ABSTRACT_DECLARATOR T_LSQUARE CONSTANT T_RSQUARE
   47                           | T_LBRACKET T_RBRACKET
   48                           | T_LBRACKET PARAMETER_TYPE_LS T_RBRACKET
   49                           | DIRECT_ABSTRACT_DECLARATOR T_LBRACKET T_RBRACKET
   50                           | DIRECT_ABSTRACT_DECLARATOR T_LBRACKET PARAMETER_TYPE_LS T_RBRACKET

   51 ABSTRACT_DECLARATOR: POINTER
   52                    | DIRECT_ABSTRACT_DECLARATOR
   53                    | POINTER DIRECT_ABSTRACT_DECLARATOR

   54 TYPE_NAME: SPECIFIER_QUALIFIER_LS
   55          | SPECIFIER_QUALIFIER_LS ABSTRACT_DECLARATOR

   56 IDENTIFIER_LS: T_IDENTIFIER
   57              | IDENTIFIER_LS T_COMMA T_IDENTIFIER

   58 PARAMETER_DECLARATION: DECLARATION_SPECIFIER DECLARATOR
   59                      | DECLARATION_SPECIFIER
   60                      | DECLARATION_SPECIFIER ABSTRACT_DECLARATOR

   61 PARAMETER_LS: PARAMETER_DECLARATION
   62             | PARAMETER_LS T_COMMA PARAMETER_DECLARATION

   63 PARAMETER_TYPE_LS: PARAMETER_LS
   64                  | PARAMETER_LS T_COMMA T_ELLIPSIS

   65 TYPE_QUALIFIER_LS: TYPE_QUALFIIER
   66                  | TYPE_QUALIFIER_LS TYPE_QUALFIIER

   67 POINTER: T_TIMES
   68        | T_TIMES POINTER
   69        | T_TIMES TYPE_QUALIFIER_LS
   70        | T_TIMES TYPE_QUALIFIER_LS POINTER

   71 DIRECT_DECLARATOR: T_IDENTIFIER
   72                  | T_LBRACKET DECLARATOR T_RBRACKET
   73                  | DIRECT_DECLARATOR T_LSQUARE CONSTANT T_RSQUARE
   74                  | DIRECT_DECLARATOR T_LSQUARE T_RSQUARE
   75                  | DIRECT_DECLARATOR T_LBRACKET T_RBRACKET
   76                  | DIRECT_DECLARATOR T_LBRACKET PARAMETER_TYPE_LS T_RBRACKET
   77                  | DIRECT_DECLARATOR T_LBRACKET IDENTIFIER_LS T_RBRACKET

   78 DECLARATOR: POINTER DIRECT_DECLARATOR
   79           | DIRECT_DECLARATOR

   80 TYPE_QUALFIIER: T_CONST
   81               | T_VOLATILE

   82 ENUM: T_IDENTIFIER
   83     | T_IDENTIFIER T_EQUAL CONSTANT

   84 ENUM_LS: ENUM
   85        | ENUM_LS T_COMMA ENUM

   86 ENUM_SPECIFIER: ENUM T_LCURLY ENUM_LS T_RCURLY
   87               | ENUM T_IDENTIFIER T_LCURLY ENUM_LS T_RCURLY
   88               | ENUM T_IDENTIFIER

   89 STRUCT_DECLARATOR: DECLARATOR
   90                  | T_COLON CONSTANT
   91                  | DECLARATOR T_COLON CONSTANT

   92 STRUCT_DELCLARATOR_LS: STRUCT_DECLARATOR
   93                      | STRUCT_DECLARATION_LS T_COMMA STRUCT_DECLARATOR

   94 SPECIFIER_QUALIFIER_LS: TYPE_SPECIFIER SPECIFIER_QUALIFIER_LS
   95                       | TYPE_SPECIFIER
   96                       | TYPE_QUALFIIER SPECIFIER_QUALIFIER_LS
   97                       | TYPE_QUALFIIER

   98 STRUCT_DECLARATION: SPECIFIER_QUALIFIER_LS STRUCT_DELCLARATOR_LS T_SEMI

   99 STRUCT_DECLARATION_LS: STRUCT_DECLARATION
  100                      | STRUCT_DECLARATION_LS STRUCT_DECLARATION

  101 STRUCT_OR_UNION: T_STRUCT
  102                | T_UNION

  103 STRUCT_OR_UNION_SPECIFIER: STRUCT_OR_UNION T_IDENTIFIER T_LCURLY STRUCT_DECLARATION_LS T_RCURLY
  104                          | STRUCT_OR_UNION T_LCURLY STRUCT_DECLARATION_LS T_RCURLY
  105                          | STRUCT_OR_UNION T_IDENTIFIER

  106 TYPE_SPECIFIER: T_VOID
  107               | T_CHAR
  108               | T_SHORT
  109               | T_INT
  110               | T_LONG
  111               | T_DOUBLE
  112               | T_SIGNED
  113               | T_UNSIGNED
  114               | T_TYPENAME
  115               | STRUCT_OR_UNION_SPECIFIER
  116               | ENUM_SPECIFIER

  117 STORAGE_CLASS: T_TYPEDEF
  118              | T_EXTERN
  119              | T_STATIC
  120              | T_AUTO
  121              | T_REGISTER

  122 INIT_DECLARATOR: DECLARATOR
  123                | DECLARATOR T_EQUAL INITIALIZER

  124 INIT_DECLARATOR_LS: INIT_DECLARATOR
  125                   | INIT_DECLARATOR_LS T_COMMA INIT_DECLARATOR

  126 DECLARATION_SPECIFIER: STORAGE_CLASS
  127                      | STORAGE_CLASS DECLARATION_SPECIFIER
  128                      | TYPE_SPECIFIER
  129                      | TYPE_SPECIFIER DECLARATION_SPECIFIER
  130                      | TYPE_QUALFIIER
  131                      | TYPE_QUALFIIER DECLARATION_SPECIFIER

  132 DECLARATION: DECLARATION_SPECIFIER T_SEMI
  133            | DECLARATION_SPECIFIER INIT_DECLARATOR_LS T_SEMI

  134 CONSTANT: CONDITIONAL

  135 EXPRESSION: ASSIGNMENT
  136           | EXPRESSION T_COMMA ASSIGNMENT

  137 ASSIGN_OPERATOR: T_EQUAL
  138                | T_PLUSASSIGN
  139                | T_MINUSASSIGN
  140                | T_MULTASSIGN
  141                | T_DIVASSIGN
  142                | T_MODASSIGN
  143                | T_LEFTASSIGN
  144                | T_RIGHTASSIGN
  145                | T_ANDASSIGN
  146                | T_XORASSIGN
  147                | T_ORASSIGN

  148 ASSIGNMENT: CONDITIONAL
  149           | UNARY ASSIGN_OPERATOR ASSIGNMENT

  150 CONDITIONAL: LOGICAL_OR
  151            | LOGICAL_OR T_QUESTION EXPRESSION T_COLON CONDITIONAL

  152 LOGICAL_OR: LOGICAL_AND
  153           | LOGICAL_AND T_OR LOGICAL_AND

  154 LOGICAL_AND: INCLUSIVE_OR
  155            | LOGICAL_AND T_AND INCLUSIVE_OR

  156 INCLUSIVE_OR: EXCLUSIVE_OR
  157             | INCLUSIVE_OR T_BITOR EXCLUSIVE_OR

  158 EXCLUSIVE_OR: AND_EXP
  159             | EXCLUSIVE_OR T_BITXOR AND_EXP

  160 AND_EXP: EQUALITY
  161        | AND_EXP T_BITAND EQUALITY

  162 EQUALITY: RELATIONAL
  163         | EQUALITY T_DOUBLEEQUAL RELATIONAL
  164         | EQUALITY T_NOTEQUAL RELATIONAL

  165 RELATIONAL: SHIFTING
  166           | RELATIONAL T_LESS SHIFTING
  167           | RELATIONAL T_GREAT SHIFTING
  168           | RELATIONAL T_LESSEQUAL SHIFTING
  169           | RELATIONAL T_GREATEQUAL SHIFTING

  170 SHIFTING: ADDITION
  171         | SHIFTING T_LEFTSHIFT ADDITION
  172         | SHIFTING T_RIGHTSHIFT ADDITION

  173 ADDITION: MULTIPLICATION
  174         | ADDITION T_PLUS MULTIPLICATION
  175         | ADDITION T_MINUS MULTIPLICATION

  176 MULTIPLICATION: CASTING
  177               | MULTIPLICATION T_TIMES CASTING
  178               | MULTIPLICATION T_DIVIDE CASTING
  179               | MULTIPLICATION T_MOD CASTING

  180 CASTING: UNARY
  181        | T_LBRACKET TYPE_NAME T_RBRACKET CASTING

  182 UNARY_OPERATOR: T_BITAND
  183               | T_BITNOT
  184               | T_MINUS
  185               | T_PLUS
  186               | T_TIMES

  187 UNARY: POST_EXPRESSION
  188      | T_DOUBLEPLUS UNARY
  189      | T_DOUBLEMINUS UNARY
  190      | UNARY_OPERATOR CASTING
  191      | T_SIZEOF UNARY_OPERATOR
  192      | T_SIZEOF T_LBRACKET TYPE_NAME T_RBRACKET

  193 ARGUMENT_EXPRESSION_LS: ASSIGNMENT
  194                       | ARGUMENT_EXPRESSION_LS T_COMMA ASSIGNMENT

  195 POST_EXPRESSION: PRIMARY
  196                | POST_EXPRESSION T_LBRACKET T_RBRACKET
  197                | POST_EXPRESSION T_DOUBLEPLUS
  198                | POST_EXPRESSION T_DOUBLEMINUS
  199                | POST_EXPRESSION T_POINTER T_IDENTIFIER
  200                | POST_EXPRESSION T_LSQUARE EXPRESSION T_RSQUARE
  201                | POST_EXPRESSION T_LBRACKET ARGUMENT_EXPRESSION_LS T_RBRACKET
  202                | POST_EXPRESSION T_STOP T_IDENTIFIER

  203 PRIMARY: T_IDENTIFIER
  204        | T_LBRACKET EXPRESSION T_RBRACKET
  205        | T_CONST
  206        | T_STRING_LITERAL


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    T_TIMES (258) 67 68 69 70 177 186
    T_DIVIDE (259) 178
    T_PLUS (260) 174 185
    T_MINUS (261) 175 184
    T_EXPONENT (262)
    T_AND (263) 155
    T_OR (264) 153
    T_NOT (265)
    T_DOUBLEPLUS (266) 188 197
    T_DOUBLEMINUS (267) 189 198
    T_LBRACKET (268) 11 12 13 14 15 16 17 42 47 48 49 50 72 75 76 77 181 192 196 201 204
    T_RBRACKET (269) 11 12 13 14 15 16 17 42 47 48 49 50 72 75 76 77 181 192 196 201 204
    T_LCURLY (270) 24 25 26 27 40 41 86 87 103 104
    T_RCURLY (271) 24 25 26 27 40 41 86 87 103 104
    T_LSQUARE (272) 43 44 45 46 73 74 200
    T_RSQUARE (273) 43 44 45 46 73 74 200
    T_SEMI (274) 6 7 8 9 10 12 18 19 98 132 133
    T_MOD (275) 179
    T_NUMBER <number> (276)
    T_VARIABLE (277)
    T_BITAND (278) 161 182
    T_BITOR (279) 157
    T_BITXOR (280) 159
    T_BITNOT (281) 183
    T_LEFTSHIFT (282) 171
    T_RIGHTSHIFT (283) 172
    T_INT (284) 109
    T_VOID (285) 106
    T_DOUBLEEQUAL (286) 163
    T_NOTEQUAL (287) 164
    T_LESSEQUAL (288) 168
    T_GREATEQUAL (289) 169
    T_IF (290) 15 16
    T_ELSE (291) 16
    T_WHILE (292) 11 12
    T_GREAT (293) 167
    T_LESS (294) 166
    T_EQUAL (295) 83 123 137
    T_PLUSASSIGN (296) 138
    T_MINUSASSIGN (297) 139
    T_MULTASSIGN (298) 140
    T_DIVASSIGN (299) 141
    T_MODASSIGN (300) 142
    T_LEFTASSIGN (301) 143
    T_RIGHTASSIGN (302) 144
    T_ANDASSIGN (303) 145
    T_XORASSIGN (304) 146
    T_ORASSIGN (305) 147
    T_COMMA (306) 38 41 57 62 64 85 93 125 136 194
    T_GOTO (307) 6
    T_CONTINUE (308) 7
    T_BREAK (309) 8
    T_RETURN (310) 9 10
    T_DO (311) 12
    T_FOR (312) 13 14
    T_SWITCH (313) 17
    T_COLON (314) 28 29 30 90 91 151
    T_CASE (315) 29
    T_DEFAULT (316) 30
    T_ELLIPSIS (317) 64
    T_CONST (318) 80 205
    T_CHAR (319) 107
    T_SHORT (320) 108
    T_LONG (321) 110
    T_DOUBLE (322) 111
    T_SIGNED (323) 112
    T_UNSIGNED (324) 113
    T_TYPENAME (325) 114
    T_STOP (326) 202
    T_STRING_LITERAL (327) 206
    T_IDENTIFIER <string> (328) 6 28 56 57 71 82 83 87 88 103 105 199 202 203
    T_VOLATILE (329) 81
    T_STRUCT (330) 101
    T_UNION (331) 102
    T_TYPEDEF (332) 117
    T_EXTERN (333) 118
    T_STATIC (334) 119
    T_AUTO (335) 120
    T_REGISTER (336) 121
    T_QUESTION (337) 151
    T_SIZEOF (338) 191 192
    T_POINTER (339) 199


Nonterminals, with rules where they appear

    $accept (85)
        on left: 0
    ROOT (86)
        on left: 1
        on right: 0
    FUNCTION_DEF <expr> (87)
        on left: 2 3 4 5
        on right: 1
    JUMP <expr> (88)
        on left: 6 7 8 9 10
        on right: 36
    ITERATION <expr> (89)
        on left: 11 12 13 14
        on right: 35
    SELECTION <expr> (90)
        on left: 15 16 17
        on right: 34
    EXPRESSION_STATEMENT <expr> (91)
        on left: 18 19
        on right: 13 14 33
    STATEMENT_LS <expr> (92)
        on left: 20 21
        on right: 21 25 27
    DECLARATION_LS <expr> (93)
        on left: 22 23
        on right: 2 4 23 26 27
    COMPOUND <expr> (94)
        on left: 24 25 26 27
        on right: 2 3 4 5 32
    LABELED <expr> (95)
        on left: 28 29 30
        on right: 31
    STATEMENT <expr> (96)
        on left: 31 32 33 34 35 36
        on right: 11 12 13 14 15 16 17 20 21 28 29 30
    INITIALIZER_LS <expr> (97)
        on left: 37 38
        on right: 38 40 41
    INITIALIZER <expr> (98)
        on left: 39 40 41
        on right: 37 38 123
    DIRECT_ABSTRACT_DECLARATOR <expr> (99)
        on left: 42 43 44 45 46 47 48 49 50
        on right: 45 46 49 50 52 53
    ABSTRACT_DECLARATOR <expr> (100)
        on left: 51 52 53
        on right: 42 55 60
    TYPE_NAME <expr> (101)
        on left: 54 55
        on right: 181 192
    IDENTIFIER_LS <expr> (102)
        on left: 56 57
        on right: 57 77
    PARAMETER_DECLARATION <expr> (103)
        on left: 58 59 60
        on right: 61 62
    PARAMETER_LS <expr> (104)
        on left: 61 62
        on right: 62 63 64
    PARAMETER_TYPE_LS <expr> (105)
        on left: 63 64
        on right: 48 50 76
    TYPE_QUALIFIER_LS <expr> (106)
        on left: 65 66
        on right: 66 69 70
    POINTER <expr> (107)
        on left: 67 68 69 70
        on right: 51 53 68 70 78
    DIRECT_DECLARATOR <expr> (108)
        on left: 71 72 73 74 75 76 77
        on right: 73 74 75 76 77 78 79
    DECLARATOR <expr> (109)
        on left: 78 79
        on right: 2 3 4 5 58 72 89 91 122 123
    TYPE_QUALFIIER <expr> (110)
        on left: 80 81
        on right: 65 66 96 97 130 131
    ENUM <expr> (111)
        on left: 82 83
        on right: 84 85 86 87 88
    ENUM_LS <expr> (112)
        on left: 84 85
        on right: 85 86 87
    ENUM_SPECIFIER <expr> (113)
        on left: 86 87 88
        on right: 116
    STRUCT_DECLARATOR <expr> (114)
        on left: 89 90 91
        on right: 92 93
    STRUCT_DELCLARATOR_LS <expr> (115)
        on left: 92 93
        on right: 98
    SPECIFIER_QUALIFIER_LS <expr> (116)
        on left: 94 95 96 97
        on right: 54 55 94 96 98
    STRUCT_DECLARATION (117)
        on left: 98
        on right: 99 100
    STRUCT_DECLARATION_LS (118)
        on left: 99 100
        on right: 93 100 103 104
    STRUCT_OR_UNION <expr> (119)
        on left: 101 102
        on right: 103 104 105
    STRUCT_OR_UNION_SPECIFIER <expr> (120)
        on left: 103 104 105
        on right: 115
    TYPE_SPECIFIER <expr> (121)
        on left: 106 107 108 109 110 111 112 113 114 115 116
        on right: 94 95 128 129
    STORAGE_CLASS <expr> (122)
        on left: 117 118 119 120 121
        on right: 126 127
    INIT_DECLARATOR <expr> (123)
        on left: 122 123
        on right: 124 125
    INIT_DECLARATOR_LS <expr> (124)
        on left: 124 125
        on right: 125 133
    DECLARATION_SPECIFIER <expr> (125)
        on left: 126 127 128 129 130 131
        on right: 2 3 58 59 60 127 129 131 132 133
    DECLARATION <expr> (126)
        on left: 132 133
        on right: 22 23
    CONSTANT <expr> (127)
        on left: 134
        on right: 29 44 46 73 83 90 91
    EXPRESSION <expr> (128)
        on left: 135 136
        on right: 10 11 12 14 15 16 17 19 136 151 200 204
    ASSIGN_OPERATOR <expr> (129)
        on left: 137 138 139 140 141 142 143 144 145 146 147
        on right: 149
    ASSIGNMENT <expr> (130)
        on left: 148 149
        on right: 39 135 136 149 193 194
    CONDITIONAL <expr> (131)
        on left: 150 151
        on right: 134 148 151
    LOGICAL_OR <expr> (132)
        on left: 152 153
        on right: 150 151
    LOGICAL_AND <expr> (133)
        on left: 154 155
        on right: 152 153 155
    INCLUSIVE_OR <expr> (134)
        on left: 156 157
        on right: 154 155 157
    EXCLUSIVE_OR <expr> (135)
        on left: 158 159
        on right: 156 157 159
    AND_EXP <expr> (136)
        on left: 160 161
        on right: 158 159 161
    EQUALITY <expr> (137)
        on left: 162 163 164
        on right: 160 161 163 164
    RELATIONAL <expr> (138)
        on left: 165 166 167 168 169
        on right: 162 163 164 166 167 168 169
    SHIFTING <expr> (139)
        on left: 170 171 172
        on right: 165 166 167 168 169 171 172
    ADDITION <expr> (140)
        on left: 173 174 175
        on right: 170 171 172 174 175
    MULTIPLICATION <expr> (141)
        on left: 176 177 178 179
        on right: 173 174 175 177 178 179
    CASTING <expr> (142)
        on left: 180 181
        on right: 176 177 178 179 181 190
    UNARY_OPERATOR <expr> (143)
        on left: 182 183 184 185 186
        on right: 190 191
    UNARY <expr> (144)
        on left: 187 188 189 190 191 192
        on right: 149 180 188 189
    ARGUMENT_EXPRESSION_LS <expr> (145)
        on left: 193 194
        on right: 194 201
    POST_EXPRESSION <expr> (146)
        on left: 195 196 197 198 199 200 201 202
        on right: 187 196 197 198 199 200 201 202
    PRIMARY <expr> (147)
        on left: 203 204 205 206
        on right: 195


State 0

    0 $accept: . ROOT $end

    T_TIMES       shift, and go to state 1
    T_LBRACKET    shift, and go to state 2
    T_INT         shift, and go to state 3
    T_VOID        shift, and go to state 4
    T_CONST       shift, and go to state 5
    T_CHAR        shift, and go to state 6
    T_SHORT       shift, and go to state 7
    T_LONG        shift, and go to state 8
    T_DOUBLE      shift, and go to state 9
    T_SIGNED      shift, and go to state 10
    T_UNSIGNED    shift, and go to state 11
    T_TYPENAME    shift, and go to state 12
    T_IDENTIFIER  shift, and go to state 13
    T_VOLATILE    shift, and go to state 14
    T_STRUCT      shift, and go to state 15
    T_UNION       shift, and go to state 16
    T_TYPEDEF     shift, and go to state 17
    T_EXTERN      shift, and go to state 18
    T_STATIC      shift, and go to state 19
    T_AUTO        shift, and go to state 20
    T_REGISTER    shift, and go to state 21

    ROOT                       go to state 22
    FUNCTION_DEF               go to state 23
    POINTER                    go to state 24
    DIRECT_DECLARATOR          go to state 25
    DECLARATOR                 go to state 26
    TYPE_QUALFIIER             go to state 27
    ENUM                       go to state 28
    ENUM_SPECIFIER             go to state 29
    STRUCT_OR_UNION            go to state 30
    STRUCT_OR_UNION_SPECIFIER  go to state 31
    TYPE_SPECIFIER             go to state 32
    STORAGE_CLASS              go to state 33
    DECLARATION_SPECIFIER      go to state 34


State 1

   67 POINTER: T_TIMES .
   68        | T_TIMES . POINTER
   69        | T_TIMES . TYPE_QUALIFIER_LS
   70        | T_TIMES . TYPE_QUALIFIER_LS POINTER

    T_TIMES     shift, and go to state 1
    T_CONST     shift, and go to state 5
    T_VOLATILE  shift, and go to state 14

    $default  reduce using rule 67 (POINTER)

    TYPE_QUALIFIER_LS  go to state 35
    POINTER            go to state 36
    TYPE_QUALFIIER     go to state 37


State 2

   72 DIRECT_DECLARATOR: T_LBRACKET . DECLARATOR T_RBRACKET

    T_TIMES       shift, and go to state 1
    T_LBRACKET    shift, and go to state 2
    T_IDENTIFIER  shift, and go to state 38

    POINTER            go to state 24
    DIRECT_DECLARATOR  go to state 25
    DECLARATOR         go to state 39


State 3

  109 TYPE_SPECIFIER: T_INT .

    $default  reduce using rule 109 (TYPE_SPECIFIER)


State 4

  106 TYPE_SPECIFIER: T_VOID .

    $default  reduce using rule 106 (TYPE_SPECIFIER)


State 5

   80 TYPE_QUALFIIER: T_CONST .

    $default  reduce using rule 80 (TYPE_QUALFIIER)


State 6

  107 TYPE_SPECIFIER: T_CHAR .

    $default  reduce using rule 107 (TYPE_SPECIFIER)


State 7

  108 TYPE_SPECIFIER: T_SHORT .

    $default  reduce using rule 108 (TYPE_SPECIFIER)


State 8

  110 TYPE_SPECIFIER: T_LONG .

    $default  reduce using rule 110 (TYPE_SPECIFIER)


State 9

  111 TYPE_SPECIFIER: T_DOUBLE .

    $default  reduce using rule 111 (TYPE_SPECIFIER)


State 10

  112 TYPE_SPECIFIER: T_SIGNED .

    $default  reduce using rule 112 (TYPE_SPECIFIER)


State 11

  113 TYPE_SPECIFIER: T_UNSIGNED .

    $default  reduce using rule 113 (TYPE_SPECIFIER)


State 12

  114 TYPE_SPECIFIER: T_TYPENAME .

    $default  reduce using rule 114 (TYPE_SPECIFIER)


State 13

   71 DIRECT_DECLARATOR: T_IDENTIFIER .
   82 ENUM: T_IDENTIFIER .
   83     | T_IDENTIFIER . T_EQUAL CONSTANT

    T_EQUAL  shift, and go to state 40

    T_LCURLY      reduce using rule 71 (DIRECT_DECLARATOR)
    T_LCURLY      [reduce using rule 82 (ENUM)]
    T_IDENTIFIER  reduce using rule 71 (DIRECT_DECLARATOR)
    T_IDENTIFIER  [reduce using rule 82 (ENUM)]
    $default      reduce using rule 71 (DIRECT_DECLARATOR)


State 14

   81 TYPE_QUALFIIER: T_VOLATILE .

    $default  reduce using rule 81 (TYPE_QUALFIIER)


State 15

  101 STRUCT_OR_UNION: T_STRUCT .

    $default  reduce using rule 101 (STRUCT_OR_UNION)


State 16

  102 STRUCT_OR_UNION: T_UNION .

    $default  reduce using rule 102 (STRUCT_OR_UNION)


State 17

  117 STORAGE_CLASS: T_TYPEDEF .

    $default  reduce using rule 117 (STORAGE_CLASS)


State 18

  118 STORAGE_CLASS: T_EXTERN .

    $default  reduce using rule 118 (STORAGE_CLASS)


State 19

  119 STORAGE_CLASS: T_STATIC .

    $default  reduce using rule 119 (STORAGE_CLASS)


State 20

  120 STORAGE_CLASS: T_AUTO .

    $default  reduce using rule 120 (STORAGE_CLASS)


State 21

  121 STORAGE_CLASS: T_REGISTER .

    $default  reduce using rule 121 (STORAGE_CLASS)


State 22

    0 $accept: ROOT . $end

    $end  shift, and go to state 41


State 23

    1 ROOT: FUNCTION_DEF .

    $default  reduce using rule 1 (ROOT)


State 24

   78 DECLARATOR: POINTER . DIRECT_DECLARATOR

    T_LBRACKET    shift, and go to state 2
    T_IDENTIFIER  shift, and go to state 38

    DIRECT_DECLARATOR  go to state 42


State 25

   73 DIRECT_DECLARATOR: DIRECT_DECLARATOR . T_LSQUARE CONSTANT T_RSQUARE
   74                  | DIRECT_DECLARATOR . T_LSQUARE T_RSQUARE
   75                  | DIRECT_DECLARATOR . T_LBRACKET T_RBRACKET
   76                  | DIRECT_DECLARATOR . T_LBRACKET PARAMETER_TYPE_LS T_RBRACKET
   77                  | DIRECT_DECLARATOR . T_LBRACKET IDENTIFIER_LS T_RBRACKET
   79 DECLARATOR: DIRECT_DECLARATOR .

    T_LBRACKET  shift, and go to state 43
    T_LSQUARE   shift, and go to state 44

    $default  reduce using rule 79 (DECLARATOR)


State 26

    4 FUNCTION_DEF: DECLARATOR . DECLARATION_LS COMPOUND
    5             | DECLARATOR . COMPOUND

    T_LCURLY      shift, and go to state 45
    T_INT         shift, and go to state 3
    T_VOID        shift, and go to state 4
    T_CONST       shift, and go to state 5
    T_CHAR        shift, and go to state 6
    T_SHORT       shift, and go to state 7
    T_LONG        shift, and go to state 8
    T_DOUBLE      shift, and go to state 9
    T_SIGNED      shift, and go to state 10
    T_UNSIGNED    shift, and go to state 11
    T_TYPENAME    shift, and go to state 12
    T_IDENTIFIER  shift, and go to state 46
    T_VOLATILE    shift, and go to state 14
    T_STRUCT      shift, and go to state 15
    T_UNION       shift, and go to state 16
    T_TYPEDEF     shift, and go to state 17
    T_EXTERN      shift, and go to state 18
    T_STATIC      shift, and go to state 19
    T_AUTO        shift, and go to state 20
    T_REGISTER    shift, and go to state 21

    DECLARATION_LS             go to state 47
    COMPOUND                   go to state 48
    TYPE_QUALFIIER             go to state 27
    ENUM                       go to state 28
    ENUM_SPECIFIER             go to state 29
    STRUCT_OR_UNION            go to state 30
    STRUCT_OR_UNION_SPECIFIER  go to state 31
    TYPE_SPECIFIER             go to state 32
    STORAGE_CLASS              go to state 33
    DECLARATION_SPECIFIER      go to state 49
    DECLARATION                go to state 50


State 27

  130 DECLARATION_SPECIFIER: TYPE_QUALFIIER .
  131                      | TYPE_QUALFIIER . DECLARATION_SPECIFIER

    T_INT         shift, and go to state 3
    T_VOID        shift, and go to state 4
    T_CONST       shift, and go to state 5
    T_CHAR        shift, and go to state 6
    T_SHORT       shift, and go to state 7
    T_LONG        shift, and go to state 8
    T_DOUBLE      shift, and go to state 9
    T_SIGNED      shift, and go to state 10
    T_UNSIGNED    shift, and go to state 11
    T_TYPENAME    shift, and go to state 12
    T_IDENTIFIER  shift, and go to state 46
    T_VOLATILE    shift, and go to state 14
    T_STRUCT      shift, and go to state 15
    T_UNION       shift, and go to state 16
    T_TYPEDEF     shift, and go to state 17
    T_EXTERN      shift, and go to state 18
    T_STATIC      shift, and go to state 19
    T_AUTO        shift, and go to state 20
    T_REGISTER    shift, and go to state 21

    T_IDENTIFIER  [reduce using rule 130 (DECLARATION_SPECIFIER)]
    $default      reduce using rule 130 (DECLARATION_SPECIFIER)

    TYPE_QUALFIIER             go to state 27
    ENUM                       go to state 28
    ENUM_SPECIFIER             go to state 29
    STRUCT_OR_UNION            go to state 30
    STRUCT_OR_UNION_SPECIFIER  go to state 31
    TYPE_SPECIFIER             go to state 32
    STORAGE_CLASS              go to state 33
    DECLARATION_SPECIFIER      go to state 51


State 28

   86 ENUM_SPECIFIER: ENUM . T_LCURLY ENUM_LS T_RCURLY
   87               | ENUM . T_IDENTIFIER T_LCURLY ENUM_LS T_RCURLY
   88               | ENUM . T_IDENTIFIER

    T_LCURLY      shift, and go to state 52
    T_IDENTIFIER  shift, and go to state 53


State 29

  116 TYPE_SPECIFIER: ENUM_SPECIFIER .

    $default  reduce using rule 116 (TYPE_SPECIFIER)


State 30

  103 STRUCT_OR_UNION_SPECIFIER: STRUCT_OR_UNION . T_IDENTIFIER T_LCURLY STRUCT_DECLARATION_LS T_RCURLY
  104                          | STRUCT_OR_UNION . T_LCURLY STRUCT_DECLARATION_LS T_RCURLY
  105                          | STRUCT_OR_UNION . T_IDENTIFIER

    T_LCURLY      shift, and go to state 54
    T_IDENTIFIER  shift, and go to state 55


State 31

  115 TYPE_SPECIFIER: STRUCT_OR_UNION_SPECIFIER .

    $default  reduce using rule 115 (TYPE_SPECIFIER)


State 32

  128 DECLARATION_SPECIFIER: TYPE_SPECIFIER .
  129                      | TYPE_SPECIFIER . DECLARATION_SPECIFIER
